--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,11 +3,12 @@
     package="com.ooad.practice.sticker">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
+        android:name=".MainApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name=".MainApplication"
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
@@ -18,8 +19,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".category_list"></activity>
-        <activity android:name=".Settings"></activity>
+        <activity android:name=".category_list" />
+        <activity android:name=".Settings" />
+        <activity
+            android:name=".sticker_list"
+            android:label="@string/title_activity_sticker_list"></activity>
     </application>
 
 </manifest>
