--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,11 +24,14 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     testCompile 'com.android.support.test:runner:0.2'
     androidTestCompile 'com.android.support.test:rules:0.2'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.1'
+    compile files('libs/hamcrest-core-1.3.jar')
+    compile files('libs/hamcrest-library-1.3.jar')
+    compile files('libs/jmock-2.6.0.jar')
 }
