--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,7 @@ dependencies {
     compile files('libs/hamcrest-core-1.3.jar')
     compile files('libs/hamcrest-library-1.3.jar')
     compile files('libs/jmock-2.6.0.jar')
+    compile files('libs/cglib-nodep-2.2.3.jar')
+    compile files('libs/jmock-legacy-2.6.0.jar')
+    compile files('libs/objenesis-1.0.jar')
 }
